Move script to class

--- a/config/Config.groovy.example
+++ b/config/Config.groovy.example
@@ -14,7 +14,7 @@ crop {
 dropbox {
 	enabled=true
 	uploaderScript="dropbox/dropbox_uploader.sh"
-	mainDirectory="raw"
+	mainDirectory="screenshots"
 	croppedDirectory="cropped"
 }
 
